--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+*.c
+#*/cython/resources/*.c
+#*/cython/resources/*.html
+
 # Distribution / packaging
 .Python
 build/
