--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,8 @@ __pycache__/
 # C extensions
 *.so
 
-*.c
-#*/cython/resources/*.c
-#*/cython/resources/*.html
+*/cython/resources/*.c
+*/cython/resources/*.html
 
 # Distribution / packaging
 .Python
