--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ __pycache__/
 # C extensions
 *.so
 
-examples/**/example*.png
+examples/**/*.png
 **/cython/resources/*.c
 **/cython/resources/*.html
 
